syntax = "proto3";
package com.baiyu.learn.codec.learn_11_Protobuf;
//option java_package = "com.baiyu.learn.learn_11_Protobuf";
option java_outer_classname = "SubscribeReqProto";

message SubscribeReq{
    int32 subReqID = 1;
    string userName = 2;
    string productName = 3;
    repeated string address = 4;
}