syntax = "proto3";
package com.baiyu.learn.codec.learn_11_Protobuf;
option java_outer_classname = "SubscribeRespProto";

message SubscribeResp{
    int32 subReqID = 1;
    int32 respCode = 2;
    string desc = 3;
}